[project]
name = "db-shootout"
version = "0.1.0"
package-mode = false
description = "Shootout between postgres and mongo for metrics and results storage"
authors = [
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pymongo (>=4.14.0,<5.0.0)",
    "rich (>=14.1.0,<15.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.36.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "python shootout.py"
